# DatabaseforSportClubs

./: CMakeLists.txt  Csapattag.cpp  Csapattag.h  Egyesulet.cpp  Egyesulet.h  Ellenorzofuggvenyek.cpp  Ellenorzofuggvenyek.h  Ember.cpp  Ember.h  Jatekosok.cpp  Jatekosok.h  README.md  String.cpp  String.h  Szemelyzet.cpp  Szemelyzet.h  Vezetok.cpp  Vezetok.h  gtest_lite.h  input.txt  main.cpp  memtrace.cpp  test.cpp  test.txt
